src/index.css
/* ... */
html, body{
  font-family: 'Roboto', sans-serif;
  background-color: #f1f1f1;
}
body{
  overflow-x: hidden;
}
:root{
  /* --website_main_theme: #037291; */
  --website_main_theme: rgb(121, 50, 56);
  /* --website_sec_theme: #11D8CE; */
  /* --website_sec_theme: rgb(165, 75, 84); */
  --website_sec_theme: #9C4C56;
}
.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #fff;
  height:101.4px;
  position: fixed;
  top:0px;
  width:100%;
  color:#333;
  padding:0px 30px;
  z-index: 5;
}

.gpp_logo{
  /* width: 450px; */
  width: 65%;
  object-fit: cover;
  margin-left: 50px;
  margin-top: 10px;
  margin-right: 120px;
}

.navbar ul{
  display: flex;
  list-style: none;
  margin-right: 70px;
}
.active-style{
  font-size: 20px;
  display: inline-block;
  text-decoration: none;
  cursor: pointer;
  margin-top: 10px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 0px;
  font-family: 'Ruda', sans-serif;
  color: var(--website_sec_theme);
  font-weight: bold;
}
.active-style:hover{
  border-bottom: var(--website_sec_theme) 2px solid;
}
.menu_item{
  font-size: 20px;
  display: inline-block;
  text-decoration: none;
  color:#1F1F1FCC;
  cursor: pointer;
  margin-top: 10px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 0px;
  font-family: 'Ruda', sans-serif;
  font-weight: bold;
}
.menu_item:hover{
  color: var(--website_main_theme);
  border-bottom: var(--website_sec_theme) 2px solid;
  font-weight: bold;
}
.contact_link{
  text-transform: uppercase;
  font-size: 15px;
  display: inline-block;
  text-decoration: none;
  color:#fff;
  background-color: var(--website_main_theme);
  cursor: pointer;
  margin:0px 5px;
  padding: 10px 20px;
  font-family: 'Ruda', sans-serif;
  font-weight: bold;
  border-radius: 5px;
  transition: all 0.3s ease-in-out;
}
.contact_link:hover{
  transform: scale(1.1);
}

video{
  width: 100%;
  height: 100%;
  object-fit: cover;
  position: absolute;
  top:0px;
  left: 0px;
}
.home_section {
  height: 87.5vh;
  position: relative;
  top:101.4px;
}

.home_section::before{
  content: '';
  background-color: rgba(0, 0, 0, 0.5);
  position:absolute;
  top:0px;
  left:0px;
  width:100%;
  height:100%;
}
.home_content{
  height:100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  color:#fff;
  text-align: center;
  text-align: left;
}
.home_content *{
  z-index: 3;
}
.home_content h1{
  font-family: 'Ruda', sans-serif;
  margin-left: 100px;
  font-size: 50px;
  font-weight: bold;
}
.home_content .other_description{
  line-height: 1.5;
  font-size: 18px;
  font-family: 'Noto Serif', serif;
  font-family: 'Ruda', sans-serif;
  margin-left: 100px;
  margin-right: 100px;
  margin-bottom: 30px;
  margin-top: 5px;
  font-style: italic;
}
.home_content .comp_name{
  font-size: 26px;
  font-family: 'Noto Serif', serif;
  font-family: 'Ruda', sans-serif;
  margin-left: 100px;
  margin-bottom: 15px;
}
.about_link{
  font-size: 18px;
  margin-left: 100px;
  width: 200px;
  display: inline-block;
  cursor: pointer;
  text-decoration: none;
  color:#fff;
  background-color: var(--website_main_theme);
  padding:10px 30px;
  border:none;
  border-radius: 5px;
  font-family: 'Ruda', sans-serif;
}
.about_link:hover{
  opacity: 0.8;
}
.about_icon{
  font-size: 20px;
  margin-right: 9px;
}


.about_underline, 
.news_underline
{
  margin: auto;
  width: 200px;
  height: 2px;
  background-color: var(--website_sec_theme);
  text-align: center;
  margin-bottom: 60px;
}

.about_summary{
  padding: 50px;
}
.about_summary_grid{
  display: grid;
  grid-template-columns: repeat(2,1fr);
  gap: 0;
}
.about_summary h1{
  margin-top: 150px;
  text-align: center;
  color:var(--website_main_theme);
  font-size: 36px;
  font-family: 'Ruda', sans-serif;
  padding-bottom: 30px;
  
}
.about_summary_content{
  display: flex;
  flex-direction: column;
  height: 300px;
  justify-content: center;
}
.about_summary p{
  margin-left: 70px;
  font-size: 22px;
  line-height: 1.6;
  color:#1f1f1f;
  font-family: 'Ruda', sans-serif;
  text-align: justify;
}
.about_summary img{
  height: 300px;
  object-fit: contain;
  margin-left: 100px;
}
.portfolio_summary{
  background-color: var(--website_main_theme);
  padding-bottom: 50px;
}
.bold_note{
  font-weight: bold;
}
.portfolio_summary h1{
  margin-top: 70px;
  text-align: center;
  color:#fff;
  font-weight: 300;
  font-size: 36px;
  font-family: 'Ruda', sans-serif;
  padding-bottom: 30px;
  padding-top: 80px;
}

.portfolio_note{
  margin-bottom: 50px;
  color:#fff;
  margin-left: 200px;
  margin-right: 200px;
  font-size: 20px;
  line-height: 1.5;
  text-align: justify;
  font-family: 'Noto Serif', serif;
  font-family: 'Ruda', sans-serif;
}

.techaccel{
  text-decoration: none;
  background-color: #fff;
  color:#333;
  font-size: 16px;
  padding: 8px 12px;
  border-radius: 5px;
}
.techaccel:hover{
  opacity: 0.8;
}

.portfolio_underline{
  margin: auto;
  width: 90px;
  height: 2px;
  background-color:var(--website_main_theme);
  text-align: center;
  margin-bottom: 60px;
}

.portfolio_summary_content{
  padding-top: 50px;
  padding-bottom: 30px;
  padding-left: 50px;
  padding-right: 50px;
  display: flex;
  flex-direction: column;
  background-color: #fff;
  width: 1000px;
  align-items: center;
  margin: auto;
  margin-bottom: 50px;
}
.portfolio_summary_content img{
  width: 880px;
  height: 200px;
  object-fit: cover;
}
.portfolio_summary_content h4{
  margin-top: 20px;
  font-size: 30px;
  color:var(--website_main_theme);
  margin-bottom: 20px;
}
.portfolio_summary_content p{
  line-height: 1.5;
  font-size: 20px;
  text-align: justify;
  margin-bottom: 30px;
}
/* ... */

